--- a/quizapp.html
+++ b/quizapp.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dan Projects</title>
+    <title>Quiz App - Dan Projects</title>
     <link rel="icon" href="./images/Favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="navStyle.css" />
+    <link rel="stylesheet" href="./quizapp/style.css" />
+    <link rel="stylesheet" href="./navStyle.css" />
+    <script src="./quizapp/javascript.js" defer></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script
       src="https://kit.fontawesome.com/33bbdc4b18.js"
       crossorigin="anonymous"
@@ -16,20 +23,6 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -116,90 +109,41 @@
       </div>
     </aside>
     <section>
-      <div class="centerCarousel">
-        <div class="owl-carousel owl-theme">
-          <a href="/counterdown.html">
-            <div class="item">
-              <img class="imgCar" src="images/img1Projects.jpg" />
-              <h4>Counter Down Timer</h4>
-              <div class="lanDiv">
-                <p>Language:</p>
-                <p class="lanH">JavaScript</p>
-              </div>
-            </div>
-          </a>
-          <a href="/quizapp.html">
-            <div class="item">
-              <img class="imgCar" src="images/img2Projects.jpg" />
-              <h4>Quiz App</h4>
-              <div class="lanDiv">
-                <p>Language:</p>
-                <p class="lanH">JavaScript</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="/recipeapp.html">
-            <div class="item">
-              <img class="imgCar" src="images/img2Projects.jpg" />
-              <h4>Recipe App</h4>
-              <div class="lanDiv">
-                <p>Language:</p>
-                <p class="lanH">JavaScript</p>
-              </div>
-            </div>
-          </a>
-
-          <div class="item">
-            <img class="imgCar" src="images/img1project.jpg" />
-          </div>
-        </div>
+      <div class="quiz-container">
+        <h2 class="quiz-header" id="question">Question Text</h2>
+        <ul class="quiz-body">
+          <li class="quiz-answer" id="a_ask">
+            <input type="radio" name="answer" id="a" class="answer" />
+            <label for="a" id="a_answer"></label>
+          </li>
+          <li class="quiz-answer" id="b_ask">
+            <input type="radio" name="answer" id="b" class="answer" />
+            <label for="b" id="b_answer"></label>
+          </li>
+          <li class="quiz-answer" id="c_ask">
+            <input type="radio" name="answer" id="c" class="answer" />
+            <label for="c" id="c_answer"></label>
+          </li>
+          <li class="quiz-answer" id="d_ask">
+            <input type="radio" name="answer" id="d" class="answer" />
+            <label for="d" id="d_answer"></label>
+          </li>
+        </ul>
+        <button class="quiz-submit" id="submitQuiz">Responder</button>
+        <button class="quiz-submit ocultar" id="terminarBtn">Responder</button>
       </div>
     </section>
-
-    <script src="./javascript.js" defer></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    <script type="text/javascript">
-      $(".owl-carousel").owlCarousel({
-        dots: true,
-        nav: true,
-        loop: true,
-        margin: 10,
-        responsiveClass: true,
-        center: true,
-        responsive: {
-          0: {
-            items: 1,
-          },
-          600: {
-            items: 2,
-          },
-          1000: {
-            items: 2,
-          },
-        },
-      });
-    </script>
+
+    <script src="./javascript.js" defer></script>
   </body>
 </html>
