--- a/recipeapp.html
+++ b/recipeapp.html
@@ -18,11 +18,16 @@
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>
@@ -797,6 +802,33 @@
         </div>
       </div>
     </section>
+    <div class="recipeapp">
+      <div class="mobile-container">
+        <div class="home" id="home">
+          <header class="header-container">
+            <input type="text" id="search-term" />
+            <button id="search"><i class="fas fa-search"></i></button>
+          </header>
+          <div class="fav-container">
+            <h5>Favorite Meals</h5>
+            <ul class="fav-meals" id="fav-meals"></ul>
+          </div>
+          <div class="meals-container">
+            <div class="meals ocultar" id="meals-search"></div>
+            <div class="meals" id="meals">
+              <h5>Ramdon Recipe</h5>
+            </div>
+          </div>
+        </div>
+        <div class="meal-info ocultar" id="info">          
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
